--- a/imaginaryServiceSignUpForm.html
+++ b/imaginaryServiceSignUpForm.html
@@ -48,19 +48,18 @@
                   <input type="password" id="confirmPassword">
                </div>
             </div>
+         </form>
       </div>
-      </form>
-      <div class="off-white">
+      <div class="off-white" id="bottom-section">
          <div>
-            <button type="submit">Create Account</button>
+            <button type="submit" form="divForm">Create Account</button>
          </div>
 
 
-         <div>Already have an account? <span><a href="#">Log in</a></span><span id="doesNotWork"> (Does not work)</span>
+         <div>Already have an account? <span><a href="#">Log in</a></span>
          </div>
       </div>
-      </form>
-      <div>
+      <div id="credits">
          Photo by <a href="https://unsplash.com/@rmanke">Ron Manke</a> on <a
             href="https://unsplash.com/photos/brown-mountain-range-under-cloudy-sky-xghkLM1p1zA">Unsplash</a>
       </div>
